# Discrete-Process-Control

./: .gitignore  README.md
FlowShop/: CMakeLists.txt  main.cpp
FlowShop/inc/: Problem.h  Solution.h
FlowShop/src/: Problem.cpp
Flowshop2/: CMakeLists.txt  main.cpp
Flowshop2/inc/: Problem.h  Solution.h  Task.h
Flowshop2/resources/: example1
Flowshop2/src/: Problem.cpp  TestAlgorithm.cpp
SingleMachineProblem/: CMakeLists.txt  main.cpp
SingleMachineProblem/inc/: Problem.h  Solution.h  Task.h  TestAlgorithm.h
SingleMachineProblem/resources/: example.txt  instance.txt
SingleMachineProblem/src/: Problem.cpp  Solution.cpp  Task.cpp  TestAlgorithm.cpp  TestTime.cpp
TwoMachineProblem/: CMakeLists.txt  main.cpp
TwoMachineProblem/inc/: Problem.h  Solution.h  Task.h
TwoMachineProblem/resources/: example.txt
TwoMachineProblem/src/: Problem.cpp  TestAlgorithm.cpp
